# Learning_Copilot

./: .gitignore  README.md  下一迭代任务清单（v0.1.1）.md  本地复盘学习搭子（Local Review Copilot）需求与设计文档（v0.1）.md
backend/: config.example.yaml  config.yaml  pyproject.toml
backend/local_review_copilot/: app.py  config.py  context_builder.py  main.py  models.py  multimodal.py  prompting.py  scanner.py  server.py  storage.py
backend/local_review_copilot/llm/: client.py
backend/local_review_copilot/loaders/: __init__.py  image.py  pdf.py  text.py
backend/local_review_copilot/modes/: chat.py  quiz.py  review.py
backend/local_review_copilot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/tests/: conftest.py  test_api.py  test_context_builder.py  test_multimodal.py  test_scanner.py
docs/: 2026-02-08-dev-log.md  2026-02-09-dev-log.md  2026-02-09-plan.md  api-calling-logic-spec.md  handoff-checklist.md  next-iteration-v0.1.1.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  AppV2.jsx  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
